# Music-Player

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/algorithm/: CMakeLists.txt  list.c  list.h
components/decode/: decode.h  wav.c
components/exlib/: CMakeLists.txt  exadc.c  exadc.h  exesp_timer.c  exesp_timer.h  exgpio.c  exgpio.h  exgptimer.c  exgptimer.h  exi2c.c  exi2c.h  exi2s.c  exi2s.h  exledc.c  exledc.h  exlib.h  exmcpwm.c  expcnt.c  expcnt.h  exrmt.c  exrmt.h  exsd_card.c  exsd_card.h  exsdm.c  exsdm.h  exsdmmc.c  exsdmmc.h  exsocket.c  exsocket.h  exspi.c  exspi.h  extemperature_sensor.c  extemperature_sensor.h  extouch_sensor.c  extwai.c  exuart.c  exuart.h  exusb.c  exwifi.c  exwifi.h
components/gphal/: gphal.c  gphal.h  key.c  key.h  timer.c  timer.h
components/lvgl_port/: CMakeLists.txt  lvgl_port.c  lvgl_port.h
components/on_board/: CMakeLists.txt  cst816t.c  cst816t.h  lcd.c  lcd.h  on_board.h  tcp.c  tcp.h  udp.c  udp.h  ws2812.c  ws2812.h
components/simpleGL/: CMakeLists.txt  font.c  font.h  font_Consolas.h  font_Consolas.h.orig  font_Song_Typeface.h.orig  gui.c  gui.h  guibase.c  guibase.h  sgl.c  sgl.h
components/softbus/: CMakeLists.txt  i2cex.c  i2cex.h  spiex.c  spiex.h
main/: CMakeLists.txt  driverlib.c  main.c  main.h
